# guided-analytics-platform

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
assets/: J_Branch_01_Dummy_Data.xlsx
models/: schemas.py
pages/: 1_Upload_Data.py  2_Analytics.py
utils/: canonical.py  mapping_rules.py  profiling.py  ui.py  validation.py
